# cost733class

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  configure  configure.ac
doc/: cost733class_cheatsheet.odt  cost733class_userguide.aux  cost733class_userguide.bbl  cost733class_userguide.bib  cost733class_userguide.bib.bak  cost733class_userguide.blg  cost733class_userguide.out  cost733class_userguide.tex  cost733class_userguide.toc  evpf.sh.txt  formulas_costclass.odt  help.txt  run-pdflatex.sh
f03gl/: CMakeLists.txt  FreeGLUT.h  Makefile  Makefile.am  Makefile.in  Makefile_orig  OpenGLUT.h  OpenGL_freeglut.f90  OpenGL_freeglut.nullfunc.f90  OpenGL_gl.f90  OpenGL_glu.f90  OpenGL_glut.f90  OpenGL_openglut.nullfunc.f90  README  RandomSphere_FreeGLUT.f90  RandomSphere_GLUT.f90  Script.sh  blender.f90  configure.ac  enumglu.spec  f03gl_gl.f90  f03gl_glu.f90  glu.spec  glut_interfaces.pl  h_interfaces.glutnullfunc.pl  h_interfaces.pl  modview.f90  plotfunc.f90  scube.f90  spec_interfaces.pl  sphere.f90  stars.f90
src/: CMakeLists.txt  GLUT_fonts.c  Makefile  Makefile.am  Makefile.in  aggregate.f90  arguments.f90  aritest.f90  assign.f90  axiscube.f90  binclass.f90  brier.f90  centoutput.f90  centroids.f90  ckmeans.f90  clasinput.f90  clasoutput.f90  coef4pcaproj.f90  compare_patterns.f90  compare_randindex.f90  compare_timeseries.f90  correlate.f90  cpart.f90  datainput.f90  dataviewinit.f90  days4mon.f90  dist_ratio.f90  distancevect.f90  distfunc.f90  dkmeans.f90  drat.f90  ecv.f90  effectivesamplesize.f90  erpicum.f90  ev_pf.f90  finish.f90  frequencies.f90  fsil.f90  gaussfilter.f90  geofunctions.f90  (+54 more)
